--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
         </div>
         <div class="col align-self-center">
           <div class="   ">
-            <img class="cetagory-img w-75 " src="images/Categories/bag.png" alt="">
+            <img class="cetagory-img w-75 " src="images/Categories/perfume.png" alt="">
           </div>
           <div class=" ">
-            <img class="cetagory-img w-75 " src="images/Categories/bag.png" alt="">
+            <img class="cetagory-img w-75 " src="images/Categories/shoe.png" alt="">
           </div>
        </div>
        
